Assignment01-jaeyunso/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Users/student/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Users/student/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Users/student/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/Users/student/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Users/student/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/Users/student/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Users/student/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Users/student/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Users/student/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/student/Desktop/Assignment01
-d
/Users/student/Desktop/Assignment01/doc
-encoding
UTF-8
-charset
UTF-8
/Users/student/Desktop/Assignment01/JaeyunsoAboutMe.java
<---- end of javadoc command ---->
Loading source file /Users/student/Desktop/Assignment01/JaeyunsoAboutMe.java...
/Users/student/Desktop/Assignment01/JaeyunsoAboutMe.java:24: error: unclosed string literal
        System.out.println("And this is why I'm trying to study JAVA from the beginning. To be
                           ^
/Users/student/Desktop/Assignment01/JaeyunsoAboutMe.java:24: error: ';' expected
        System.out.println("And this is why I'm trying to study JAVA from the beginning. To be
                                                                                              ^
/Users/student/Desktop/Assignment01/JaeyunsoAboutMe.java:32: error: reached end of file while parsing
}
 ^
3 errors
